Signup and Login working

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -13,6 +13,11 @@
    
       <button type="submit">Create account</button>
    
-      {{!-- error message will be added here --}}
+      {{#if errorMessage}}
+
+        <p>{{errorMessage}}</p>
+
+      {{/if}}
+      
     </form>
   </div>
