--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,7 +10,19 @@
   </head>
 
   <body>
+    <nav>
+      <ul>
 
+         <li id="to-right">
+            <a href="/signup">Signup</a> <span> | </span>
+            <a href="/login">Login</a> {{!-- !!! --}}
+         </li>
+         
+         <form id="logout-form" action="/logout" method="POST">
+            <button>Logout</button>
+         </form>
+      </ul>
+   </nav>
     {{{body}}}
 
     <script src="/js/script.js"></script>
